# Optimization-algorithm

./: .gitignore  CMakeLists.txt  Ceres_solver.cpp  GD.cpp  GD.md  GN.cpp  LM.cpp  LM.md  README.md
Algorithm/: CMakeLists.txt  DLT.cpp  GN.cpp  GN.md  LM.md
ceres/: CMakeLists.txt  curve_fit_ceres.cpp  curve_fit_ceres.h
g2o/: CMakeLists.txt  curve_fit_g2o.cpp  curve_fit_g2o.h
